[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soic-toolkit"
version = "0.1.0"
description = "Personal study toolkit: log into your own SOIC/Learnyst membership, collect accessible lesson text, and build an interactive mind map."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.5",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
soic-toolkit = "soic_toolkit.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
